# omniforge

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/run_20260226T184840Z-bec58478/: input.cnf
artifacts/run_20260226T184840Z-bec58478/proofcheck/: drat-trim.json  lrat-trim.json
artifacts/run_20260226T184840Z-bec58478/proofs/: proof.lrat
benches/sat/: README.md
benches/sat/tiny/: sat_unit.cnf  uf20-01.cnf  uf20-02.cnf
omniforge/: cli.py
omniforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
omniforge/artifacts/: manifest.py  pack.py
omniforge/contracts/: __init__.py  artifact_manifest.schema.json  eval_contract.schema.json
omniforge/eval/: benchexec_wrapper.py  scoring.py
omniforge/lanes/: correctness_lane.py  sat_lane.py
scripts/: pack_run.sh  reproduce_one.sh
scripts/tools/: install_sat_toolchain.sh
tools/: toolchain.lock.json
